--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-alert": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazyload": "^3.2.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
